--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,18 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+    themes: light --default, dark --prefersdark, black;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+/* Hide Scrollbar */
+::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none; /* Hide scrollbar for IE & Edge */
+    scrollbar-width: none; /* Hide scrollbar for Firefox */
+}
